--- a/single/essentials.yml
+++ b/single/essentials.yml
@@ -19,6 +19,10 @@
       POWERLINE_BASH_CONTINUATION=1
       POWERLINE_BASH_SELECT=1
 
+    tmuxconf: |
+      set-option -g prefix2 C-q
+      set-option -g default-terminal "screen-256color"
+
     home: "{{lookup('env', 'HOME')}}"
 
   tasks:
@@ -78,3 +82,7 @@
     - name: create basic vimrc
       copy: content="{{vimrc}}\nset rtp+={{powerlinepath.stdout_lines[0]}}/bindings/vim\n" dest="{{home}}/.vimrc"
 
+## tmux
+
+    - name: powerline support for tmux
+      copy: content="{{tmuxconf}}\nsource {{powerlinepath.stdout_lines[0]}}/bindings/tmux/powerline.conf\n" dest="{{home}}/.tmux.conf"
