--- a/single/essentials.yml
+++ b/single/essentials.yml
@@ -1,7 +1,8 @@
 ---
+# call me with --extra-vars "myuser=foo myghuser=foogh"
 
 - hosts: all
-  become_method: su
+  become: true
 
   vars:
     vimrc: |
@@ -14,16 +15,19 @@
       colorscheme molokai-transparent
       set laststatus=2
 
-    loadpowerline: |
-      powerline-daemon -q
-      POWERLINE_BASH_CONTINUATION=1
-      POWERLINE_BASH_SELECT=1
-
     tmuxconf: |
       set-option -g prefix2 C-q
       set-option -g default-terminal "screen-256color"
 
-    home: "{{lookup('env', 'HOME')}}"
+    profile: |
+      PATH=${PATH}:/usr/local/bin:/sbin:/usr/sbin:/usr/local/sbin:$HOME/bin
+      # use vim for sudoedit and all $EDITOR
+      EDITOR=vim
+      VISUAL=$EDITOR
+      export EDITOR VISUAL
+      # allow ^Q for screen / tmux
+      stty -ixon
+
 
   tasks:
     - name: installs essential tools
@@ -36,7 +40,7 @@
         - git
         - python
         - python-pip
-      become: true
+        - zsh
 
 ## sudo
 
@@ -45,44 +49,65 @@
         dest: /etc/sudoers
         block: |
           %sudo ALL=(ALL) NOPASSWD: ALL
-      become: true
+
+## create the user
+
+    - name: user add
+      user:
+        name: "{{myuser}}"
+        groups: sudo
+        shell: /usr/bin/zsh
 
 ## shell
 
     - name: install powerline from pip
       pip: name=powerline-status
-      become: true
 
-    - file:
-        path: "{{home}}/.profile.d"
-        state: directory
-        mode: 0755
-
-    - name: record module path
+    - name: record powerline module path
       command: python -c "import powerline, os; print(os.path.dirname(powerline.__file__))"
       register: powerlinepath
       failed_when: powerlinepath is undefined
 
-    - name: create powerline autoload
-      copy: content="{{loadpowerline}}\n. {{powerlinepath.stdout_lines[0]}}/bindings/bash/powerline.sh\n" dest="{{home}}/.profile.d/powerline"
+    - name: profile and powerline autoload
+      copy:
+        content: |
+          {{profile}}
 
-    - name: append profile.d autoload
-      blockinfile:
-        dest: "{{home}}/.profile"
-        block: |
-          [ -d ~/.profile.d ] && for s in ~/.profile.d/*;do . $s; done
+          powerline-daemon -q
+          . {{powerlinepath.stdout_lines[0]}}/bindings/bash/powerline.sh
+        dest: "/home/{{myuser}}/.zshrc"
 
 ## vim
 
     - name: fetch vim themes
       git:
         repo: https://github.com/hugoroy/.vim
-        dest: "{{home}}/.vim"
+        dest: "/home/{{myuser}}/.vim"
 
     - name: create basic vimrc
-      copy: content="{{vimrc}}\nset rtp+={{powerlinepath.stdout_lines[0]}}/bindings/vim\n" dest="{{home}}/.vimrc"
+      copy: content="{{vimrc}}\nset rtp+={{powerlinepath.stdout_lines[0]}}/bindings/vim\n" dest="/home/{{myuser}}/.vimrc"
 
 ## tmux
 
     - name: powerline support for tmux
-      copy: content="{{tmuxconf}}\nsource {{powerlinepath.stdout_lines[0]}}/bindings/tmux/powerline.conf\n" dest="{{home}}/.tmux.conf"
+      copy: content="{{tmuxconf}}\nsource {{powerlinepath.stdout_lines[0]}}/bindings/tmux/powerline.conf\n" dest="/home/{{myuser}}/.tmux.conf"
+
+## chown user
+
+    - name: create .ssh directory
+      file:
+        path: "/home/{{myuser}}/.ssh"
+        state: directory
+        mode: 0700
+
+    - name: fetch SSH pubkeys
+      get_url:
+        url: "https://github.com/{{myghuser}}.keys"
+        dest: "/home/{{myuser}}/.ssh/authorized_keys"
+        mode: 0600
+
+    - name: chown user
+      file:
+        path: "/home/{{myuser}}"
+        owner: "{{myuser}}"
+        recurse: yes
