--- a/single/essentials.yml
+++ b/single/essentials.yml
@@ -5,29 +5,7 @@
   become: true
 
   vars:
-    vimrc: |
-      syntax on
-      set ts=8
-      set noai
-      set ruler
-      set tw=80
-      set t_Co=256
-      colorscheme molokai-transparent
-      set laststatus=2
-
-    tmuxconf: |
-      set-option -g prefix2 C-q
-      set-option -g default-terminal "screen-256color"
-
-    profile: |
-      PATH=${PATH}:/usr/local/bin:/sbin:/usr/sbin:/usr/local/sbin:$HOME/bin
-      # use vim for sudoedit and all $EDITOR
-      EDITOR=vim
-      VISUAL=$EDITOR
-      export EDITOR VISUAL
-      # allow ^Q for screen / tmux
-      stty -ixon
-
+    homedir: "/home/{{myuser}}"
 
   tasks:
     - name: installs essential tools
@@ -60,54 +38,58 @@
 
 ## shell
 
-    - name: install powerline from pip
-      pip: name=powerline-status
-
-    - name: record powerline module path
-      command: python -c "import powerline, os; print(os.path.dirname(powerline.__file__))"
-      register: powerlinepath
-      failed_when: powerlinepath is undefined
-
-    - name: profile and powerline autoload
-      copy:
-        content: |
-          {{profile}}
-
-          powerline-daemon -q
-          . {{powerlinepath.stdout_lines[0]}}/bindings/bash/powerline.sh
-        dest: "/home/{{myuser}}/.zshrc"
-
-## vim
-
-    - name: fetch vim themes
+    - name: fetch dotfiles
       git:
-        repo: https://github.com/hugoroy/.vim
-        dest: "/home/{{myuser}}/.vim"
+        repo: https://github.com/iMilnb/dotfiles.git
+        dest: "{{homedir}}/etc/dotfiles"
 
-    - name: create basic vimrc
-      copy: content="{{vimrc}}\nset rtp+={{powerlinepath.stdout_lines[0]}}/bindings/vim\n" dest="/home/{{myuser}}/.vimrc"
+    - name: link dotfiles
+      file:
+        src: "{{homedir}}/etc/dotfiles/{{item}}"
+        dest: "{{homedir}}/{{item|regex_replace('^_', '.')}}"
+        state: link
+        force: yes
+      with_items:
+        - "_zshrc"
+        - "_p9krc"
+        - "_profile"
+        - "_tmux.conf"
+        - "_vimrc"
+        - "_vim/colors/molokai-trans.vim"
+      tags:
+        - dotfiles
 
-## tmux
+    - name: fetch oh-my-zsh
+      git:
+        repo: https://github.com/robbyrussell/oh-my-zsh.git
+        dest: "{{homedir}}/.oh-my-zsh"
 
-    - name: powerline support for tmux
-      copy: content="{{tmuxconf}}\nsource {{powerlinepath.stdout_lines[0]}}/bindings/tmux/powerline.conf\n" dest="/home/{{myuser}}/.tmux.conf"
+    - name: fetch powerlevel9k
+      git:
+        repo: https://github.com/bhilburn/powerlevel9k.git
+        dest: "{{homedir}}/.oh-my-zsh/themes/powerlevel9k"
+
+    - name: install vundle
+      git:
+        repo: https://github.com/VundleVim/Vundle.vim.git
+        dest: "{{homedir}}/.vim/bundle/Vundle.vim"
 
 ## chown user
 
     - name: create .ssh directory
       file:
-        path: "/home/{{myuser}}/.ssh"
+        path: "{{homedir}}/.ssh"
         state: directory
         mode: 0700
 
     - name: fetch SSH pubkeys
       get_url:
         url: "https://github.com/{{myghuser}}.keys"
-        dest: "/home/{{myuser}}/.ssh/authorized_keys"
+        dest: "{{homedir}}/.ssh/authorized_keys"
         mode: 0600
 
     - name: chown user
       file:
-        path: "/home/{{myuser}}"
+        path: "{{homedir}}"
         owner: "{{myuser}}"
         recurse: yes
